@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import net.minecraft.client.resources.I18n;
 import net.minecraft.inventory.IInventory;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
@@ -14,12 +13,13 @@ import net.minecraft.nbt.NBTTagCompound;
 
 import com.asdflj.ae2thing.api.Constants;
 import com.asdflj.ae2thing.nei.ButtonConstants;
+import com.glodblock.github.common.item.ItemBaseWirelessTerminal;
 import com.glodblock.github.common.item.ItemWirelessUltraTerminal;
-import com.glodblock.github.inventory.gui.GuiType;
-import com.glodblock.github.util.NameConst;
+import com.glodblock.github.util.UltraTerminalModes;
 
+import appeng.core.sync.network.NetworkHandler;
+import appeng.core.sync.packets.PacketInventoryAction;
 import appeng.helpers.InventoryAction;
-import appeng.util.Platform;
 
 public class FCUltraTerminal implements IItemTerminal {
 
@@ -27,7 +27,7 @@ public class FCUltraTerminal implements IItemTerminal {
 
     @Override
     public List<Class<? extends Item>> getClasses() {
-        return Arrays.asList(ItemWirelessUltraTerminal.class);
+        return List.of(ItemWirelessUltraTerminal.class);
     }
 
     @Override
@@ -47,26 +47,17 @@ public class FCUltraTerminal implements IItemTerminal {
 
     private List<TerminalItems> getTerminalItems(ItemStack source, int slot) {
         List<TerminalItems> terminal = new ArrayList<>();
-        if (source != null && source.getItem() instanceof ItemWirelessUltraTerminal terminalItem) {
+        if (source != null && source.getItem() instanceof ItemWirelessUltraTerminal) {
             NBTTagCompound tag = this.newNBT();
             tag.setInteger(Constants.SLOT, slot);
             if (getConfigValue(ButtonConstants.ULTRA_TERMINAL_MODE)) {
-                List<GuiType> guis = ItemWirelessUltraTerminal.getGuis();
-                for (GuiType guiType : guis) {
+                for (UltraTerminalModes mode : UltraTerminalModes.values()) {
                     ItemStack t = source.copy();
-                    terminalItem.setNext(guiType, t);
-                    NBTTagCompound data = Platform.openNbtData(t);
-                    if (data.hasKey("display")) {
-                        terminal.add(
-                            new TerminalItems(
-                                source,
-                                t,
-                                t.getDisplayName() + " "
-                                    + I18n.format(NameConst.TT_ULTRA_TERMINAL + "." + terminalItem.guiGuiType(t)),
-                                tag));
-                    } else {
-                        terminal.add(new TerminalItems(source, t, tag));
+                    if (!t.hasTagCompound()) {
+                        t.setTagCompound(new NBTTagCompound());
                     }
+                    ItemBaseWirelessTerminal.setMode(t, mode);
+                    terminal.add(new TerminalItems(source, t, t.getDisplayName(), tag));
                 }
             } else {
                 terminal.add(new TerminalItems(source, source, tag));
@@ -87,11 +78,7 @@ public class FCUltraTerminal implements IItemTerminal {
 
     @Override
     public void openCraftAmount() {
-        com.glodblock.github.network.CPacketInventoryAction packet = new com.glodblock.github.network.CPacketInventoryAction(
-            InventoryAction.AUTO_CRAFT,
-            0,
-            0);
-        com.glodblock.github.FluidCraft.proxy.netHandler.sendToServer(packet);
+        NetworkHandler.instance.sendToServer(new PacketInventoryAction(InventoryAction.AUTO_CRAFT, 0, 0L));
     }
 
 }
