@@ -9,7 +9,6 @@ import java.util.stream.Collectors;
 
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiScreen;
-import net.minecraft.item.ItemStack;
 
 import org.spongepowered.asm.mixin.Final;
 import org.spongepowered.asm.mixin.Mixin;
@@ -24,6 +23,7 @@ import com.asdflj.ae2thing.client.me.AdvItemRepo;
 import com.asdflj.ae2thing.client.me.IDisplayRepoExtend;
 
 import appeng.api.storage.data.IAEItemStack;
+import appeng.api.storage.data.IAEStack;
 import appeng.api.storage.data.IDisplayRepo;
 import appeng.api.storage.data.IItemList;
 import appeng.client.me.ItemRepo;
@@ -33,22 +33,17 @@ public abstract class MixinItemRepo implements IDisplayRepo, IDisplayRepoExtend 
 
     @Shadow(remap = false)
     @Final
-    private ArrayList<ItemStack> dsp;
+    private ArrayList<IAEStack<?>> view;
 
     @Shadow(remap = false)
     @Final
-    private ArrayList<IAEItemStack> view;
-
-    @Shadow(remap = false)
-    @Final
-    private IItemList<IAEItemStack> list;
+    private IItemList<IAEStack<?>> list;
 
     @Shadow(remap = false)
     private boolean paused;
 
     private void setAsEmpty(int i) {
         this.view.add(i, null);
-        this.dsp.add(i, null);
     }
 
     private final Minecraft mc = Minecraft.getMinecraft();
@@ -102,9 +97,9 @@ public abstract class MixinItemRepo implements IDisplayRepo, IDisplayRepoExtend 
     }
 
     private void viewFilter() {
-        List<IAEItemStack> list = this.view.stream()
+        List<IAEStack<?>> list = this.view.stream()
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
         this.view.clear();
         this.view.addAll(list);
     }
@@ -133,12 +128,11 @@ public abstract class MixinItemRepo implements IDisplayRepo, IDisplayRepoExtend 
                 continue;
             }
             IAEItemStack is = pinItems.get(i);
-            IAEItemStack item = this.list.findPrecise(is);
-            Set<IAEItemStack> itemSet = new HashSet<>(this.view);
+            IAEStack<?> item = this.list.findPrecise(is);
+            Set<IAEStack<?>> itemSet = new HashSet<>(this.view);
             if (item != null) {
                 if (!itemSet.contains(item)) {
                     this.view.add(i, item);
-                    this.dsp.add(i, item.getItemStack());
                 }
                 continue;
             }
